# OpenRTel

./: README.md  edu.case.OpenRTel.json  meson.build  python3-requirements.json  requirements.txt
data/: edu.case.OpenRTel.desktop.in  edu.case.OpenRTel.gschema.xml  edu.case.OpenRTel.metainfo.xml.in  edu.case.OpenRTel.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: controls.py  main.py  meson.build  openrtel.gresource.xml  openrtel.in  window.py  window.ui
